# GoQuant

./: CMakeLists.txt  README.md  api.env
GoQuantOEMSApp/: GoQuantOEMSApp.sln  GoQuantOEMSApp.vcxproj  GoQuantOEMSApp.vcxproj.filters  api_credentials.cpp  api_manager.cpp  api_manager.h  main.cpp  order_manager.cpp  order_manager.h  refresh_token.txt  token_manager.cpp  utility_manager.cpp  utility_manager.h  web_socket_client.cpp  web_socket_client.h
